--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#jjwt config
+springbootjjwt.password.secret=mysecret
+springbootjjwt.jjwt.secret=mysecret
+springbootjjwt.jjwt.expiration=28800
